# reckon_bolt_app

./: .gitignore  README.md  generate-api-client.ps1  openapi-generator-config.yaml  reckon-schema.yaml  release.ps1
reckon-api/: Cargo.toml  README.md
reckon-api/.openapi-generator/: FILES
reckon-api/docs/: AddAccount.md  AddAccountApi.md  AggregateApi.md  AppApi.md  AuthToken.md  ChangePassword.md  ChangePasswordApi.md  ClientOrganization.md  ClientOrganizationAggregate.md  ClientOrganizationApi.md  ClientOrganizationVariableDistribution200ResponseInner.md  CompetitiveDraftSlots.md  CompetitiveDraftSlotsAggregate.md  CompetitiveDraftSlotsApi.md  CompetitiveGameSummaries.md  CompetitiveGameSummariesAggregate.md  CompetitiveGameSummariesApi.md  CompetitiveGames.md  CompetitiveGamesAggregate.md  CompetitiveGamesApi.md  CompetitiveRoundSummaries.md  CompetitiveRoundSummariesAggregate.md  CompetitiveRoundSummariesApi.md  CompetitiveRoundSummariesDeathEventInner.md  CompetitiveRoundSummariesDeathEventInnerAssistantsInner.md  CompetitiveRoundSummariesOtherAbilitiesInner.md  CompetitiveRoundSummariesPlayerSnapshotsInner.md  CompetitiveRoundSummariesPlayerSnapshotsInnerAbilitiesValue.md  CompetitiveRoundSummariesPlayerSnapshotsInnerAliveState.md  CompetitiveRoundSummariesPlayerSnapshotsInnerAliveStateEquippedItem.md  (+72 more)
releases/: versions.json
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/valorant/: api.rs  auth.rs  live.rs  lockfile.rs  mod.rs  types.rs
(+103 files in other folders)
