[package]
name = "reckon-bolt-app"
version = "1.0.1"
description = "Valorant scrims retrieval desktop app"
authors = ["you"]
edition = "2021"

[lib]
name = "reckon_bolt_app_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
base64 = "0.22"
reckon_api = { path = "../reckon-api" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }
dirs = "5"
rfd = "0.15"
